--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
       <div class="instructions">~ use arrow keys to move ~</div>
     </div>
 
+    <div id="speech"></div>
+
     <!-- Theme Toggle -->
     <div class="theme-mode-toggle-button">
       <svg
