--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
       <div class="instructions">~ use arrow keys to move ~</div>
     </div>
 
-    <div id="speech"></div>
+    <div id="speech" class="speech-bubble"></div>
+    
 
     <!-- Theme Toggle -->
     <div class="theme-mode-toggle-button">
@@ -185,7 +186,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="modal-project-visit-button hidden"
-              >View Project</a
+              >More Information</a
             >
           </div>
         </div>
